Revision history for PostScript-Report

0.04   NOT
	- Use cp1252 encoding (requires PostScript::File 1.05)
	- Fixed bug (crashed because of a VBox with only 1 child)

0.03   October 28, 2009
	- Added background attribute to Component
	- Added detail_background attribute to Report
	- Added stripe & stripe_page to Builder
	- Add PageOrder: Ascend comment
	- Fixed bug in multiline FieldTL (was using wrong line height)
	- Warn in documentation against making padding_bottom too small

0.02   October 22, 2009
	- Builder allows scalar ref as shortcut for Value::Constant
	  and _default overrides default_field_type in a container
	- Warn if a field's value does not exist.
	  Do not warn about existing but undefined values.
	- Added the ps_parameters attribute to Report
	- Updated documentation

0.01   October 20, 2009
	- Initial release