@@ -4,6 +4,7 @@ MANIFEST
 META.yml
 Makefile.PL
 README
+examples/border_test.pl
 examples/image.pl
 examples/multiline_header.pl
 examples/recycle.eps
